--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "flowbite": "^2.4.1"
+        "flowbite": "^2.4.1",
+        "trumbowyg": "^2.28.0"
     }
 }
